[gd_scene load_steps=14 format=2]

[ext_resource path="res://audio/level2_2.wav" type="AudioStream" id=1]
[ext_resource path="res://AudioManager.gd" type="Script" id=2]
[ext_resource path="res://DarkTheme/Icons/dropper.png" type="Texture" id=3]
[ext_resource path="res://DarkTheme/Icons/Banner.png" type="Texture" id=4]
[ext_resource path="res://audio/level1_2.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/leveldown.wav" type="AudioStream" id=6]
[ext_resource path="res://DarkTheme/Fonts/Dum1.tres" type="DynamicFont" id=7]
[ext_resource path="res://DarkTheme/Icons/slider.png" type="Texture" id=8]
[ext_resource path="res://DarkTheme/Icons/NM audio engine gui bg.png" type="Texture" id=9]
[ext_resource path="res://DarkTheme/Dark.theme" type="Theme" id=10]
[ext_resource path="res://audio/level3_2.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/levelup.wav" type="AudioStream" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -704.0
theme = ExtResource( 10 )

[node name="level1" type="Button" parent="."]
margin_left = 48.0
margin_top = 112.0
margin_right = 272.0
margin_bottom = 157.0
text = "Level 1"

[node name="Banner" type="Sprite" parent="level1"]
position = Vector2( 112, 18 )
scale = Vector2( 0.287915, 0.287915 )
z_index = -1
texture = ExtResource( 4 )

[node name="level2" type="Button" parent="."]
margin_left = 48.0
margin_top = 168.0
margin_right = 272.0
margin_bottom = 213.0
text = "Level 2"

[node name="Banner2" type="Sprite" parent="level2"]
position = Vector2( 112, 19 )
scale = Vector2( 0.287915, 0.287915 )
z_index = -1
texture = ExtResource( 4 )

[node name="level3" type="Button" parent="."]
margin_left = 48.0
margin_top = 224.0
margin_right = 272.0
margin_bottom = 269.0
text = "Level 3"

[node name="Banner3" type="Sprite" parent="level3"]
position = Vector2( 112, 20 )
scale = Vector2( 0.287915, 0.287915 )
z_index = -1
texture = ExtResource( 4 )

[node name="transitions" type="CheckBox" parent="."]
margin_left = 64.0
margin_top = 285.0
margin_right = 248.0
margin_bottom = 333.0
text = "Transition stingers"

[node name="duckingForTransitions" type="CheckBox" parent="."]
margin_left = 64.0
margin_top = 333.0
margin_right = 249.0
margin_bottom = 381.0
text = "Stingers duck music"

[node name="immediateTrans" type="CheckBox" parent="."]
margin_left = 64.0
margin_top = 381.0
margin_right = 258.0
margin_bottom = 429.0
text = "Immediate transitions"

[node name="TransitionQBeats" type="HSlider" parent="."]
margin_left = 64.0
margin_top = 472.0
margin_right = 256.0
margin_bottom = 496.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
min_value = 1.0
max_value = 4.0
value = 2.0

[node name="Slider" type="Sprite" parent="TransitionQBeats"]
position = Vector2( 96, 14 )
z_index = -1
texture = ExtResource( 8 )

[node name="AudioManager" type="Control" parent="."]
margin_left = 520.0
margin_top = 216.0
margin_right = 576.0
margin_bottom = 256.0
script = ExtResource( 2 )

[node name="Beat" type="Label" parent="AudioManager"]
margin_left = -424.0
margin_top = 320.0
margin_right = -296.0
margin_bottom = 348.4
custom_fonts/font = ExtResource( 7 )
text = "4"
align = 1
valign = 1

[node name="Level1" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 5 )

[node name="Level2" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 1 )

[node name="Level3" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 11 )

[node name="TweenIn" type="Tween" parent="AudioManager"]

[node name="TweenOut" type="Tween" parent="AudioManager"]

[node name="TweenDuck" type="Tween" parent="AudioManager"]

[node name="LevelUp" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 12 )
volume_db = -3.0

[node name="LevelDown" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 6 )
volume_db = -1.216

[node name="2" type="Label" parent="."]
margin_left = 71.0
margin_top = 503.0
margin_right = 87.4
margin_bottom = 531.4
text = "2"

[node name="transitionLabel" type="Label" parent="."]
margin_left = 63.0
margin_top = 442.0
margin_right = 256.4
margin_bottom = 470.4
text = "Transition every x beats"

[node name="4" type="Label" parent="."]
margin_left = 124.0
margin_top = 503.0
margin_right = 141.4
margin_bottom = 531.4
text = "4"

[node name="8" type="Label" parent="."]
margin_left = 178.0
margin_top = 504.0
margin_right = 194.4
margin_bottom = 532.4
text = "8"

[node name="16" type="Label" parent="."]
margin_left = 229.0
margin_top = 504.0
margin_right = 253.4
margin_bottom = 529.4
text = "16"

[node name="NmAudioEngineGuiBg" type="Sprite" parent="."]
position = Vector2( 160, 304 )
z_index = -2
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 35.0
margin_top = 48.0
margin_right = 280.4
margin_bottom = 76.4
text = "Godot Web Audio Engine"
align = 1

[connection signal="pressed" from="level1" to="AudioManager" method="_on_level1_pressed"]
[connection signal="pressed" from="level2" to="AudioManager" method="_on_level2_pressed"]
[connection signal="pressed" from="level3" to="AudioManager" method="_on_level3_pressed"]
[connection signal="toggled" from="immediateTrans" to="AudioManager" method="_on_immediateTrans_toggled"]
[connection signal="value_changed" from="TransitionQBeats" to="AudioManager" method="_on_TransitionQBeats_value_changed"]
[connection signal="tween_completed" from="AudioManager/TweenIn" to="AudioManager" method="_on_TweenIn_tween_completed"]
[connection signal="tween_completed" from="AudioManager/TweenOut" to="AudioManager" method="_on_TweenOut_tween_completed"]
[connection signal="tween_completed" from="AudioManager/TweenDuck" to="AudioManager" method="_on_TweenOut_tween_completed"]
